# dodgecoin

./: .gitignore  Cargo.toml  LICENSE  README.md  dodgecoin.sln  export_presets.cfg  project.godot
.github/workflows/: rust.yml
assets/: ball.png.import  coin.png.import
scenes/: coin.tscn  level.cs  level.tscn  player.tscn  room.tscn  start_menu.tscn
scenes/levels/: level1.tscn
scenes/rooms/: room_four_walls_open.tscn  room_one_wall_open.tscn  room_three_walls_open.tscn  room_two_walls_open_adjacent.tscn  room_two_walls_open_opposite.tscn
scenes/rooms/walls/: wall_closed.tscn  wall_open.tscn
scripts/: Coin.cs  Level1.cs  Player.cs  QuitButton.cs  Room.cs  RoomArea.cs  StartButton.cs  quit_button.cs  start_button.cs
src/: components.rs  constants.rs  embedded_assets.rs  main.rs  resources.rs  systems.rs
